# warehouse_ws

./: .gitattributes  .gitignore  README.md  README_cn.md
src/drone_bringup/: package.xml  setup.py
src/drone_bringup/drone_bringup/: startup_supervisor.py  startup_supervisor.py.bak  wait_for_topic.py
src/drone_bringup/launch/: run_ground_station.launch.py  run_offboard.launch.py  run_qr_vision_gazebo.launch.py
src/drone_bringup/scripts/: install_px4_gazebo_vision_assets.sh  start_d435.sh  start_px4_gazebo_vision_sim.sh
src/drone_bringup/sim/: README.md
src/drone_bringup/sim/models/vision_target_board/: model.config  model.sdf
src/drone_bringup/sim/px4_models/iris_opt_flow_mid360/: iris_opt_flow_mid360.sdf  model.config
src/drone_bringup/sim/worlds/: warehouse_vision.world
src/drone_control/: CMakeLists.txt  camera_aim_k230_integration_test_checklist.md  camera_aim_k230_real_flight_debug.md  camera_aim_k230_task_checklist.md  camera_aim_k230_teammate_delivery.md  camera_aim_pid_tuning_guide.md  frame_usage_teammate_delivery.md  move_smoothing_design.md  package.xml
src/drone_control/config/: ground_mission.yaml  sample.yaml
src/drone_control/include/drone_control/: action_executor.hpp  drone_action.hpp  sliding_window_average.h
src/drone_control/src/: mission_controller_node.cpp  route_comm_node.cpp  tf_bridge_node.cpp
src/drone_localization/: CMakeLists.txt  package.xml
src/drone_localization/src/: compare_yaw_node.cpp  fastlio_to_mavros.cpp  fastlio_to_mavros.cpp.bak  fastlio_to_mavros_odom_out.cpp
src/drone_mission/: CMakeLists.txt  package.xml
src/drone_mission/config/: ground_mission.yaml  ground_mission2.yaml
src/drone_mission/warehouse/: mission.yaml
src/drone_msgs/: CMakeLists.txt  package.xml
src/drone_msgs/include/drone_msgs/: link_protocol.hpp
src/drone_msgs/msg/: BarcodeCapture.msg  DroneStatus.msg  GridGroup.msg  GridPoint.msg  K230AnimalCenter.msg  K230AnimalTarget.msg  K230AnimalTargets.msg  K230CaptureReady.msg  K230RecordResult.msg  K230ScanPointDone.msg  MissionSummary.msg  ReadyStatus.msg  TaskStatus.msg  WorldGroup.msg
src/drone_msgs/srv/: StartOffboard.srv  UploadMissionSummary.srv  UploadMissionYaml.srv
src/drone_perception/: CMakeLists.txt  package.xml
src/drone_perception/docs/: k230_animals_vision_control_closed_loop.md  k230_current_vision_and_control_handoff.md  k230_route_scan_gate.md  k230_uart_测试.md  rdk_x5_bpu_migration_background.md  yolo_npu_fps_optimization.md
src/drone_perception/include/drone_perception/: bpu_ocr_pipeline.hpp  bpu_yolo_detector.hpp  depth_processor.hpp  detection.hpp  k230_animals_uart_ros2_node.hpp  qr_vision_node.hpp  rknn_yolo_detector.hpp  yolo_postprocessor.hpp
src/drone_perception/scripts/: k230_animals_detect_uart.py  k230_animals_image_saver.sh  k230_animals_udp_ros2_node.py  k230_snapshot_decode.sh  monitor_qr_perf.sh  monitor_yolo_npu_perf.sh
src/drone_perception/src/: bpu_model_probe.cpp  bpu_ocr_pipeline.cpp  bpu_yolo_detector.cpp  depth_processor.cpp  k230_animals_uart_ros2_node.cpp  k230_tcp_bridge.cpp  main.cpp  qr_vision_node.cpp  rknn_yolo_detector.cpp  yolo_postprocessor.cpp
src/drone_qt/: CMakeLists.txt  package.xml
src/drone_qt/include/drone_qt/: ground_link_bridge.hpp  image_preview_dialog.hpp  link_protocol.hpp  mainwindow.hpp  mission_yaml_builder.hpp  position_view_widget.hpp  ros_manager.hpp
src/drone_qt/src/: ground_link_bridge.cpp  ground_link_bridge_main.cpp  image_preview_dialog.cpp  main.cpp  mainwindow.cpp  mission_yaml_builder.cpp  position_view_widget.cpp  ros_manager.cpp
src/drone_qt_2/: CMakeLists.txt  package.xml
src/drone_qt_2/include/drone_qt_2/: airborne_link_bridge.hpp  airborne_node.hpp  mission_yaml_builder.hpp
src/drone_qt_2/src/: airborne_link_bridge.cpp  airborne_link_bridge_main.cpp  airborne_node.cpp  barcode_text_sender.cpp  main.cpp  mission_yaml_builder.cpp
src/drone_warehouse/: CMakeLists.txt  package.xml
src/drone_warehouse/include/drone_warehouse/: ai_diff_analyzer.hpp  color_palette.hpp  gpio_output.hpp  ground_link_bridge.hpp  link_protocol.hpp  mainwindow.hpp  models.hpp  ros_manager.hpp  scene_view.hpp  set_gpio.hpp  shelf_info_dialog.hpp  shelf_panel_storage.hpp  top_status_bar.hpp
src/drone_warehouse/python/: text  text.py
src/drone_warehouse/scripts/: warehouse_ai_runner.py
src/drone_warehouse/src/: ai_diff_analyzer.cpp  gpio_output.cpp  ground_link_bridge.cpp  ground_link_bridge_main.cpp  main.cpp  mainwindow.cpp  ros_manager.cpp  scene_view.cpp  shelf_info_dialog.cpp  shelf_panel_storage.cpp  top_status_bar.cpp
