<?xml version="1.0"?>
<package format="3">
  <name>drone_perception</name>
  <version>0.0.1</version>
  <description>TCP bridge for K230 JPEG snapshots and ROS 2 topic publishing.</description>
  <maintainer email="gjl@example.com">gjl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>drone_msgs</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
