<?xml version="1.0"?>
<package format="3">
  <name>drone_perception</name>
  <version>0.0.2</version>
  <description>Drone perception: RGB BPU detection and TCP/UART bridges for K230 cameras.</description>
  <maintainer email="gjl@example.com">gjl</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>drone_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_geometry</depend>
  <depend>rcl_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>zbar</depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
