cmake_minimum_required(VERSION 3.8)
project(drone_qt_2)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(drone_msgs REQUIRED)
find_package(mavros_msgs REQUIRED)

add_executable(airborne_node
  src/main.cpp
  src/airborne_node.cpp
  include/drone_qt_2/airborne_node.hpp
)

add_executable(barcode_test_sender
  src/barcode_text_sender.cpp
)

target_include_directories(airborne_node PUBLIC
  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
  $<INSTALL_INTERFACE:include>
)

ament_target_dependencies(airborne_node
  rclcpp
  std_msgs
  std_srvs
  drone_msgs
  mavros_msgs
)

ament_target_dependencies(barcode_test_sender
  rclcpp
  drone_msgs
)

install(TARGETS
  airborne_node
  barcode_test_sender
  DESTINATION lib/${PROJECT_NAME}
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
